# AURA_V2

./: .gitignore  README.md
aura-ai/: .env.example  .gitignore  README.md  requirements-audio.txt  requirements.txt
aura-ai/app/: config.py  conversation.py  main.py
aura-ai/app/auth/: jwt_validator.py
aura-ai/app/graph/: graph_builder.py  state.py
aura-ai/app/schemas/: action_payload.py
aura-ai/app/services/: backend_client.py  gemini_agent.py  rule_fallback.py  stt_engine.py  tts_engine.py
aura-be/: .env.example  .gitignore  README.md  requirements.txt
aura-be/apps/commands/: admin.py  models.py  serializers.py  urls.py  views.py
aura-be/apps/macros/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
aura-be/apps/service_auth/: admin.py  apps.py  models.py  permissions.py
aura-be/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
aura-be/config/: asgi.py  urls.py  wsgi.py
aura-be/config/settings/: base.py  dev.py  prod.py
aura-fe/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
aura-fe/src-tauri/: Cargo.toml  Info.dev.plist  Info.plist  README.md  tauri.conf.json
aura-fe/src-tauri/src/: commands.rs  lib.rs
aura-fe/src/app/: globals.css  layout.tsx  page.tsx
aura-fe/src/hooks/: useRequireAuth.ts
aura-fe/src/lib/: api.ts  auth.ts  conversation.ts  executor.ts  services.ts  validators.ts  websocket.ts
aura-fe/src/store/: authStore.ts
aura-fe/src/types/: index.ts
docs/: action-payload-contract.md
(+30 files in other folders)
